plugins {
    id 'java-library'
    id 'maven-publish'
    id 'idea'
    id 'net.neoforged.moddev' version '2.0.107'
}

version = "${project.minecraft_version}-${project.mod_version}"
group = mod_group_id

repositories {
    mavenLocal()
}

base {
    archivesName = "Unusual-Prehistory-2"
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    version = project.neo_version
    interfaceInjectionData = project.files('src/main/resources/META-INF/interfaceinjections.json')

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    runs {
        client {
            client()

            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()

            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "$mod_id" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets.main.resources {
    srcDir 'src/generated/resources'
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

repositories {
    mavenCentral()
    exclusiveContent {
        forRepository {
            maven {
                name = "CurseMaven"
                url "https://cursemaven.com"
            }
        }
        filter {
            includeGroup "curse.maven"
        }
    }
    exclusiveContent {
        forRepository {
            maven {
                name = "Modrinth"
                url = "https://api.modrinth.com/maven"
            }
        }
        filter {
            includeGroup "maven.modrinth"
        }
    }
    maven {
        url = "https://maven.blamejared.com/"
    }
    flatDir {
        dirs 'libs'
    }
}

dependencies {
    compileOnly "mezz.jei:jei-$minecraft_version-common-api:$jei_version"
    compileOnly "mezz.jei:jei-$minecraft_version-neoforge-api:$jei_version"
    localRuntime "mezz.jei:jei-$minecraft_version-neoforge:$jei_version"
    implementation "maven.modrinth:jade:yd8FKCmx"

    implementation "maven.modrinth:patchouli:BIogJv2D"

    localRuntime "maven.modrinth:appleskin:3.0.5+mc1.21"
    localRuntime "maven.modrinth:worldedit:7.3.6"
    localRuntime "maven.modrinth:cyanide:v4LiMGGH"
    localRuntime "maven.modrinth:better-advancements:FjTYILOi"
    localRuntime "maven.modrinth:commandstructures:rTiLoxgs"
    localRuntime "maven.modrinth:just-enough-effect-descriptions-jeed:HpxNIA6x"
    localRuntime "maven.modrinth:sodium:mc1.21.1-0.6.13-neoforge"
    localRuntime "maven.modrinth:lithium:mc1.21.1-0.15.3-neoforge"
    localRuntime "maven.modrinth:tool-kit:LGQfsuBg"
    localRuntime "maven.modrinth:architectury-api:ZxYGwlk0"
}

tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            neo_version_range      : neo_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description
    ]

    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml']) {
        expand replaceProperties
    }
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}